Add JAXB module on Java 9+